# multi-agent-system-library

./: .gitignore  CODE_REVIEW_IMPROVEMENT_PLAN.md  IMPLEMENTATION_REPORT.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: tests.yml
examples/: .env  api_keys.json  config.json  main.py
examples/aws_example/: AWS MAS Installation Guide.txt  api_keys.json  config.json  lambda_function.py  requirements.txt  samconfig.toml  template.yaml
examples/aws_example/new/: bootstrap.sh
examples/simple_example/: api_keys.json  config.json  main.py
examples/telegram_tts_example/: api_keys.json  config.json  fns.py  main.py
lib/: std.json  std.py
mas/: __init__.py  _shared.py  bots.py  components.py  dashboard.py  manager.py  mas.py  parser.py
mas/cli/: cli.py
mas/lib/: std.json  std.py
maws/: README.md  __init__.py  bootstrap.sh  cli.py  maws.py  operations.py  params.json  pyproject.toml  runtime.py
maws/maws/: __init__.py  maws.py
maws/resources/: __init__.py  bootstrap.sh  pull_history.sh
multi agent system/: mas.py
tests/: conftest.py  test_agent_fallback.py  test_automation_control_flow.py  test_bot_media_actions.py  test_dashboard.py  test_indexing_and_blocks.py  test_manager_defaults_and_indexing.py  test_manager_persistence.py  test_maws_pull_history.py  test_maws_runtime.py  test_model_failure_backoff.py  test_network_timeouts.py  test_nvidia_provider.py  test_packaging_contracts.py  test_parser_and_components.py  test_standard_library_contracts.py  test_to_blocks.py  test_user_message_metadata.py  test_variables.py  test_wavespeed_provider.py
