# pyproject.toml

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mas"
version = "0.3.3"
description = "A powerful and flexible framework for creating and managing multi-agent systems."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
  { name="Nicolas Martorell", email="mneuronico@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "requests",
]

[project.optional-dependencies]
aws = ["boto3"]
audio = ["mutagen>=1.46"]
env = ["python-dotenv"]
ffmpeg = ["ffmpeg-python>=0.2.0"]
maws = ["boto3"]
telegram = ["python-telegram-bot"]
whatsapp = ["Flask>=3,<4"]
bots = ["python-telegram-bot", "Flask>=3,<4"]
data = ["pandas>=2,<3"]
dev = ["pytest>=8,<10", "build>=1,<2", "tomli>=2,<3; python_version < '3.11'"]
all = [
    "boto3",
    "Flask>=3,<4",
    "mutagen>=1.46",
    "pandas>=2,<3",
    "python-dotenv",
    "python-telegram-bot",
]

[project.urls]
Homepage = "https://github.com/mneuronico/multi-agent-system-library"

[project.scripts]
mas = "mas.cli.cli:main"
maws = "maws.cli:main"

[tool.setuptools]
include-package-data = true
packages = ["mas", "mas.cli", "mas.lib", "maws", "maws.resources"]

[tool.setuptools.package-data]
maws = ["resources/*"]
"maws.resources" = ["*"]
